--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,18 @@ body{
     align-items: center;
     z-index: 100;
 }
+
+.logo {
+    font-size: 2.5rem;
+    color : var(--main-color);
+    font-weight: 600;
+    cursor: default;
+    margin-right: auto;
+}
+
+.navbar a {
+    font-size: 1.7rem;
+    color: var(--white-color);
+    font-weight: 500;
+    margin-right: 3.5rem;
+}
