--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,25 @@ body{
 }
 
 .navbar a {
+    position: relative;
     font-size: 1.7rem;
     color: var(--white-color);
     font-weight: 500;
     margin-right: 3.5rem;
+}
+
+.navbar a.active::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 0.2rem;
+    background: var(--white-color);
+}
+
+#darkMode-icon{
+    font-size: 2.4rem; 
+    color: var(--white-color);
+    cursor: pointer;
 }
