--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body{
     left: 0;
     width: 100%;
     padding: 2rem 7%;
-    background: yellowgreen;
+    background: black;
     display: flex;
     align-items: center;
     z-index: 100;
@@ -71,4 +71,49 @@ body{
     font-size: 2.4rem; 
     color: var(--white-color);
     cursor: pointer;
+}
+
+section {
+    min-height: 100vh;
+    padding: 10rem 7% 2rem;
+}
+
+.home {
+    display: flex;
+    align-items: center;
+
+}
+
+.home .home-content{
+    max-width: 60rem;
+}
+ 
+.home-content h3{
+    font-size: 4.2rem;
+    font-weight: 700;
+    line-height: .8;
+
+}
+
+.home-content h1{
+    font-size: 6.6rem;
+    font-weight: 700;
+}
+
+.home-content p {
+    font-size: 1.6rem;
+}
+
+.home-content .social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    background: transparent;
+    border: .2rem solid var(--main-color);
+    border-radius: 50%;
+    box-shadow: 0 .2rem .5rem var(--shadow-color);
+    font-size: 2rem;
+    color: var(--main-color);
 }
