--- a/css/styles.css
+++ b/css/styles.css
@@ -116,4 +116,31 @@ section {
     box-shadow: 0 .2rem .5rem var(--shadow-color);
     font-size: 2rem;
     color: var(--main-color);
+    margin: 2.5rem 1.5rem 3rem 0;
+    transition: .5s ease;
+}
+
+.home-content .social-media a:hover {
+    background: var(--main-color);
+    color: var(--white-color);
+}
+
+.btn {
+    display: inline-block;
+    padding: 1.2rem 2.8rem;
+    background: var(--main-color);
+    border-radius: .6rem;
+    box-shadow: 0 .2rem .5rem var(--shadow-color);
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--white-color);
+    border: .2rem solid transparent;
+    letter-spacing: .1rem;
+    transition: .5s ease;
+}
+
+.btn:hover {
+    background-color: transparent;
+    color: var(--main-color);
+    border: .2rem solid var(--main-color);
 }
