--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,6 @@ section {
     right: 0;
     width: 1080px;
     height: 1080px;
-    background-color: black;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -179,6 +178,8 @@ section {
     color: var(--main-color);
     transform: rotate(calc(360deg /4 * var(--i)));
     transform-origin: 540px;
+    background-color: var(--bg-color);
+    padding: 29px 0;
 }
 
 .home .profession i{
@@ -190,4 +191,23 @@ section {
     font-size: 4.2rem;
     font-weight: 600;
     line-height: 1;
+}
+
+.home .profession-box .circle{
+    width: 768px;
+    height: 768px;
+    border: 3px solid var(--main-color);
+    border-radius: 50%;
+}
+
+.home .profession-container .overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-top: 540px solid var(--main-color);
+    border-right: 540px solid var(--main-color);
+    border-left: 540px solid transparent;
+    border-bottom: 540px solid var(--main-color);
 }
