--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,15 @@ body{
     display: flex;
     align-items: center;
     z-index: 100;
+    transition: .5s;
 }
+
+.header.sticky{
+    background: var(--bg-color);
+    box-shadow: 0 .2rem 2rem var(--shadow-color);
+}
+
+
 
 .logo {
     font-size: 2.5rem;
@@ -65,12 +73,30 @@ body{
     width: 100%;
     height: 0.2rem;
     background: var(--white-color);
+    transition: .5s;
+}
+
+.header.sticky .navbar a.active::before {
+    background: var(--main-color);
+    opacity: .7s;
+}
+
+.header.sticky .navbar a {
+    color: var(--text-color);
+}
+
+.header.sticky .navbar a.active {
+    color: var(--main-color);
 }
 
 #darkMode-icon{
     font-size: 2.4rem; 
     color: var(--white-color);
     cursor: pointer;
+}
+
+.header.sticky #darkMode-icon{
+    color: var(--text-color);
 }
 
 section {
@@ -229,7 +255,7 @@ span {
     justify-content: center;
     align-items: center;
     gap: 5rem;
-    background-color: blueviolet;
+    background-color: var(--bg-color)
 }
 
 .about-img{
