--- a/css/styles.css
+++ b/css/styles.css
@@ -151,8 +151,8 @@ section {
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    width: 100vw;
-    height: 100vh;
+    width: 1080px;
+    height: 1080px;
     overflow: hidden;
     pointer-events: none;
 }
