--- a/css/styles.css
+++ b/css/styles.css
@@ -254,3 +254,20 @@ span {
     font-size: 2.6rem;
     margin: 2rem 0 3rem
 }
+
+.services .services-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+
+.services-container .services-box{
+    flex: 1 1 30rem;
+    background: var(--bg-color);
+    padding: 3rem 2rem 4rem;
+    background-origin: 2rem;
+    box-shadow: 0 .1rem .5rem var(--shadow-color);
+
+}
