--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ span {
     justify-content: center;
     align-items: center;
     gap: 5rem;
-    background-color: blueviolet;
+    background-color: var(--bg-color);
 }
 
 .about-img{
