Portfolio Layer Animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,12 @@ span {
 
 .portfolio-box img{
     width: 100%;
+    transition: .5s ease;
+}
+
+.portfolio-box:hover img{
+    transform: scale(1.1);
+
 }
 
 .portfolio-box .portfolio-layer {
@@ -378,4 +384,35 @@ span {
     flex-direction: column;
     text-align: center;
     padding: 0 4rem;
+    opacity: 0;
+    transition: .5s ease;
+}
+
+.portfolio-box:hover .portfolio-layer {
+    opacity: 1;
+
+}
+
+.portfolio-layer h4 {
+    font-size: 4rem;
+}
+
+.portfolio-layer p {
+    font-size: 2rem;
+    margin: 1rem 0 2rem;
+}
+
+.portfolio-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--white-color);
+    border-radius: 50%;
+}
+
+.portfolio-layer a i {
+    font-size: 2.5rem;
+    color: #333;
 }
