--- a/css/styles.css
+++ b/css/styles.css
@@ -427,7 +427,7 @@ span {
 
 .testimonial-container .testimonial-wrapper {
     position: relative;
-    max-width: 100rem;
+    max-width: 110rem;
     width: 100%;
     padding: 5rem;
 }
@@ -467,4 +467,28 @@ span {
 .testimonial-slide p {
     font-size: 1.8rem;
     text-align: center;
+}
+
+.testimonial-box .swiper-button-next, 
+.testimonial-box .swiper-button-prev {
+    color: var(--main-color);
+}
+
+
+.testimonial-box .swiper-button-next {
+    right: 0;
+
+}
+.testimonial-box .swiper-button-prev {
+    left: 0;
+}
+
+.testimonial-box .swiper-pagination-bullet {
+
+    background: rgb(0, 0, 0, 0.7);
+}
+
+.testimonial-box .swiper-pagination-bullet-active {
+
+    background: var(--main-color);
 }
