--- a/css/styles.css
+++ b/css/styles.css
@@ -493,6 +493,32 @@ span {
     background: var(--main-color);
 }
 
-.contact h2{
-    margin-bottom: 4rem;
+.contact h2 {
+    padding-bottom: 3rem;
+}
+
+.contact form {
+    max-width: 80rem;
+    margin: 2rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contact form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+.contact form .input-box input,
+.contact form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background-color: var(--bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+    box-shadow: 0 .1rem .5rem var(--shadow-color);
 }
