--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 :root {
     --bg-color: #fdfdfd;
     --text-color: #333;
-    --main-color: #FF366B;
+    --main-color: #E23E57;
     --white-color: #fdfdfd;
     --shadow-color: rgb(0, 0, 0, 0.2);
 }
@@ -498,7 +498,7 @@ span {
 }
 
 .contact form {
-    max-width: 80rem;
+    max-width: 100rem;
     margin: 2rem auto;
     text-align: center;
     margin-bottom: 3rem;
@@ -515,10 +515,23 @@ span {
 .contact form textarea{
     width: 100%;
     padding: 1.5rem;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color: var(--text-color);
     background-color: var(--bg-color);
     border-radius: .8rem;
     margin: .7rem 0;
     box-shadow: 0 .1rem .5rem var(--shadow-color);
+}
+
+.contact form .input-box input {
+    width: 49%;
+}
+
+.contact form textarea {
+    resize: none;
+}
+
+.contact form .btn {
+    margin-top: 2rem;
+    cursor: pointer;
 }
