--- a/css/styles.css
+++ b/css/styles.css
@@ -535,3 +535,18 @@ span {
     margin-top: 2rem;
     cursor: pointer;
 }
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background-color: var(--main-color);
+}
+
+.footer-text p {
+    font-size: 1.6rem;
+    color: var(--white-color);
+    
+}
