--- a/css/styles.css
+++ b/css/styles.css
@@ -548,5 +548,20 @@ span {
 .footer-text p {
     font-size: 1.6rem;
     color: var(--white-color);
-    
+
+}
+
+.footer-iconTop a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: var(--white-color);
+    border-radius: .8rem;
+    border: .2rem solid var(--main-color);
+}
+
+.footer-iconTop a i {
+    font-size: 3rem;
+    color: var(#333);
 }
