--- a/css/styles.css
+++ b/css/styles.css
@@ -559,7 +559,14 @@ span {
     background: var(--white-color);
     border-radius: .8rem;
     border: .2rem solid var(--main-color);
+    outline: .2rem solid transparent;
+    transition: .5s ease;
 }
+
+.footer-iconTop a:hover {
+    outline-color: var(--white-color);
+}
+
 
 .footer-iconTop a i {
     font-size: 3rem;
